--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,12 @@
     "description": "illume", 
     "version": "1.0",
     "manifest_version": 3, 
+    
     "background": {
         "service_worker": "scripts/background.js"
     },
     
-    "permissions": ["storage", "activeTab", "contextMenus"],
+    "permissions": ["storage", "activeTab", "contextMenus", "scripting"],
     
     "action": {
         "default_popup": "templates/popup.html"
@@ -15,8 +16,17 @@
     
     "content_scripts": [
         {
-            "matches": ["https://*.google.com/*"],
-            "js": ["scripts/content.js"]
+            "matches": ["<all_urls>"],
+            "js": ["scripts/content.js"],
+            "run_at": "document_end"
         }
-    ]
+    ],
+
+    "host_permissions": [
+        "<all_urls>"
+    ],
+
+    "externally_connectable": {
+        "matches": ["https://*.example.com/*"]
+    }
 }
