--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ google-genai = "^0.1.0"
 python-dotenv = "^1.0.0"
 flask = "^3.0.0"
 flask-cors = "^4.0.0"
+modal = "^0.73.135"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
