--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ python-dotenv = "^1.0.0"
 flask = "^3.0.0"
 flask-cors = "^4.0.0"
 modal = "^0.73.135"
-boto3 = "^1.34.0"
+tqdm = "^4.66.2"
+
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.4.0"
